--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -1,25 +1,37 @@
 extends layout
 
 block head 
-  script(src='/javascripts/passwordCheck.js' defer) 
+  script(src='/javascripts/passwordCheck.js' defer)
 
 block content
+
+  //- define a test user object
+  - var user = {name: 'Thomas', surname: 'Timmons', email: 'tlt33@bath.ac.uk'}
+
   h1 Sign Up
-  form(method='POST')
-    label(for='name') Name*
-    input(id='name' placeholder='name' type='text'  required value=(undefined===user ? '' : user.name))
-    label(for='surname') Surname*
-    input(id='surname' placeholder='surname' type='text' required value=(undefined===user ? '' : user.surname)) 
-    label(for='email') University Email*
-    input(id='email' placeholder='email@bath.ac.uk' type='email' required value=(undefined===user ? '' : user.email))
-    label(for='password') Password*
-    input(id='password' type='password' placeholder="password" required)
-    label(for='passwordConfirm') Confirm Password*
-    input(id='passwordConfirm' type='password' placeholder="password" required onkeyup="validate_password()")
-    button(id='submit' onclick='reset_highlighting()') Sign Up
+  form(id='signup-form')
+    label(for='signup-firstname') Name*
+    input(id='signup-firstname' placeholder='Firstname' type='text' required value=(undefined===user ? '' : user.name))
+
+    label(for='signup-surname') Surname*
+    input(id='signup-surname' placeholder='Surname' type='text' required value=(undefined===user ? '' : user.surname)) 
+
+    label(for='signup-email') University Email*
+    input(id='signup-email' placeholder='jb1@bath.ac.uk' type='email' required value=(undefined===user ? '' : user.email))
+
+    label(for='signup-password') Password*
+    input(id='signup-password' type='password' placeholder="Password" required)
+
+    label(for='signup-passwordConfirm') Confirm Password*
+    input(id='signup-passwordConfirm' type='password' placeholder="Password" required onkeyup="validate_password()")
+
+    button(id="signup-submit" onclick='reset_highlighting()') Sign Up
   div(id='wrong_pass_alert')
 
   if errors
     ul
       for error in errors
         li!= error.msg
+
+block scripts
+  script(src='/javascripts/auth.js')
