--- a/views/ladder.pug
+++ b/views/ladder.pug
@@ -4,20 +4,33 @@ block head
     link(rel='stylesheet', href='/stylesheets/ladder.css')
 
 block content
-  h1 Ladder
+  div(class='ladderPage')
+    div(class='personalBackground')
+      div(class='personal')
+        h1 My Challenges
+        h1 My Results
+    div(class='ladderBackground')
+      div(class='ladder')
+        h1 Ladder
 
-  table(style='width:100%', border='1')
-    tr 
-      th Position 
-      th Player
-    if users
-      each user in users 
-        tr 
-          td(class='position') #{user.position}
-          td #{user.name + ' ' + user.surname}
-          if loggedInUser
-            if Number(loggedInUser.position) > Number(user.position)
-              td
-                button Challenge
-  <br>
-  h2 Log in to challenge players on the ladder
+        table(style='width:100%', border='1')
+          tr 
+            th Position 
+            th Player
+          if users
+            each user in users 
+              tr 
+                td(class='position') #{user.position}
+                td #{user.name + ' ' + user.surname}
+                if loggedInUser
+                  if Number(loggedInUser.position) > Number(user.position)
+                    td
+                      button Challenge
+        <br>
+        h2 Log in to challenge players on the ladder
+    div(class='globalBackground')
+      div(class='global')
+        h1 Recent Challenges
+        h2 Pending 
+        h2 Accepted
+        h1 Recent Match Results
