Adding node_modules to .gitignore (#1)
* Add pug forms and skeleton structure

* Add .gitignore file to exclude node_modules

* Add gitignore rules for node_modules, environment-specific files, logs, OS-specific files, and generated files

* delete node_modules file from remote repo

* Edit stylesheet

* Refactor README.md file

* Add firebase-admin package to package.json

* Add Firebase SDK and routes for challenges

* Add challenges route

* Ignore local configuration files  in .gitignore

* basic connection firestore with firebase-admin

* display email and password to console

* half mast

* Fix app.js db setting

---------

Co-authored-by: Sukoshi <hugo.cordon100@gmail.com>

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,32 @@ doctype html
 html
   head
     title= title
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    block head
+
   body
-    block content
+    div(class='navbar') 
+      h1 Bath Squash Ladder
+      div(class='navigation')
+        a(href='/') Ladder
+        a(href='/personal') Personal
+        a(href='/global') Global
+        a(href='/login') Login / Sign up
+
+    div(class='content')
+      block content
+
+    script(type="module").
+      // run the index.js script
+      import { signupEmailPassword } from '/javascripts/index.js';
+
+      const testValue = 'test';
+
+      // export all
+      export { signupEmailPassword, testValue };
+
+    block scripts
+
+
