--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,99 @@
+:root {
+  --darkDarkBlue: rgb(1, 18, 32);
+  --mediumDarkBlue: rgb(1, 43, 78);
+  --lightBlue: rgb(133, 170, 250);
+  --darkBlue: rgb(6, 66, 132);
+  --mainBlue: rgb(0, 86, 161);
+  --yellow: rgb(245, 191, 57);
+}
+
+* {
+  color: white;
+  
+}
+
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  background-color: var(--darkDarkBlue);
+  display: grid;
+  grid-template-rows: 0fr 0fr;
+  height: 100vh;
 }
 
 a {
-  color: #00B7FF;
+  color: white;
+  text-decoration: none;
 }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--mediumDarkBlue);
+  padding: 0px 30px;
+  align-items: center;
+  position: sticky;
+  top: 0px;
+}
+
+.navbar h1 {
+  font-size: 3em;
+}
+
+.navigation {
+  display: flex;
+  gap: 50px;
+  font-weight: 700;
+  font-size: 1.25em;
+  padding-right: 30px;
+}
+
+.content {
+  display: grid;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+form {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 15px;
+  align-items: center;
+}
+
+form button {
+  grid-column: 1/3;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding: 8px;
+  background-color: var(--yellow);
+  border-style: none;
+  font-weight: 900;
+  color: black;
+}
+
+input {
+  border-style: none;
+  background-color: var(--mediumDarkBlue);
+  padding: 8px;
+}
+input:focus {
+  border-style: none;
+}
+
+.signUpButton {
+  margin-top: 10px;
+  width: 100%;
+  text-align: center;
+  background-color: var(--mediumDarkBlue);
+  padding: 8px 0;
+  font-weight: 900;
+}
+
+.error {
+  border-color: red;
+  border-style: solid;
+}
+
